--- a/settings.json
+++ b/settings.json
@@ -6,7 +6,7 @@
             "local_dir": "/home/discord_bot/",
             "remote_user": "taylor-cowin",
             "remote_name": "origin",
-            "remote_branch": "main"
+            "remote_branch": "dev"
         }
     ]
 }
