added web listener to reload script

--- a/settings.json
+++ b/settings.json
@@ -17,6 +17,15 @@
             "remote_name": "origin",
             "remote_branch": "dev",
             "service_name": "discord_dev"
+        },
+        {
+            "endpoint": "/event/github-sync-push",
+            "repo_name": "github-webhook-listener",
+            "local_dir": "/home/discord_bot/dev",
+            "remote_user": "taylor-cowin",
+            "remote_name": "origin",
+            "remote_branch": "main",
+            "service_name": "github-sync"
         }
     ]
 }
